<resources>
    <string name="app_name">SmileyFace</string>
    <string name="title_inspection_detail">Inspection Detail</string>
    <string name="empty_locations_list">We could not find any restaurants for you right now</string>
    <string name="empty_map">We could not find this address on the map</string>
    <string name="loading_list">Loading restaurants\nPlease wait</string>
    <string name="list_address">%1$s, %2$s</string>
    <string name="list_address_long">%1$s, %2$s %3$s</string>
    <string name="last_inspection_lbl">Last inspection result:</string>
    <string name="alt_inspection_smiley">Inspection smiley</string>
    <string name="category1">Routines and management:</string>
    <string name="category2">Premises and equipment:</string>
    <string name="category3">Food handling and preparation:</string>
    <string name="category4">Labelling and traceability:</string>
    <string name="inspection_result_details">Inspection result details:</string>
    <string name="previous_results">Previous results:</string>
    <string name="title_activity_test_tab">TestTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_title_info">Info</string>
    <string name="tab_title_map">Map</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search name, address or place</string>
    <string name="latest_smiley">Latest smiley</string>
</resources>
